--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   calendar_date_picker2: ^0.5.3
   dots_indicator: ^2.1.1
   carousel_slider: ^4.2.1
+  font_awesome_flutter: ^9.2.0
 
 
 
@@ -80,7 +81,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
-    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
