--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   dots_indicator: ^2.1.1
   carousel_slider: ^4.2.1
   font_awesome_flutter: ^9.2.0
+  lottie:
+  image_picker:
+  quickalert:
+
 
 
 
@@ -81,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
